<resources>
    <string name="about_dev">Development: Fernando Rowies, fernandorowies.dev@gmail.com 4282-3000 11-5849-8374</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="add_new_customer">Add new customer</string>
    <string name="address">Address</string>
    <string name="amount">Amount</string>
    <string name="app_name">InfnServer</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="cart">Cart</string>
    <string name="customers">Customers</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="detail">Detail</string>
    <string name="e_mail">E-Mail</string>
    <string name="enter_customer_name">Enter customer name</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="place_order">Place Order</string>
    <string name="please_fill_full_info">Please fill full information</string>
    <string name="please_waiting">Please waiting...</string>
    <string name="product_service">Product | Service</string>
    <string name="select">Select</string>
    <string name="select_picture">Select Picture</string>
    <string name="selected">Selected</string>
    <string name="sign_in">Sign In</string>
    <string name="staff_user_ne_in_db">Staff user not exist in Database</string>
    <string name="thank_you">Thank you</string>
    <string name="there_no_email_cli_inst">There are no email clients installed</string>
    <string name="update">Update</string>
    <string name="update_customer">Update Customer</string>
    <string name="upload">Upload</string>
    <string name="uploaded">Uploaded</string>
    <string name="uploading">Uploading</string>
    <string name="wrong_password">Wrong Password !!!</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
</resources>
