<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    >

    <LinearLayout
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            app:met_baseColor="#75000000"
            app:met_primaryColor="@color/colorAccent"
            app:met_errorColor="#DD1A00"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="30"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtAddress"
            android:hint="@string/address"
            android:inputType="text"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            app:met_baseColor="#75000000"
            app:met_primaryColor="@color/colorAccent"
            app:met_errorColor="#DD1A00"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="40"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtEmail"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            app:met_baseColor="#75000000"
            app:met_primaryColor="@color/colorAccent"
            app:met_errorColor="#DD1A00"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="40"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPhone"
            android:hint="@string/phone"
            android:inputType="phone"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            app:met_baseColor="#75000000"
            app:met_primaryColor="@color/colorAccent"
            app:met_errorColor="#DD1A00"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="20"
            app:met_singleLineEllipsis="true" />

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSelect"
                android:text="@string/select"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@android:color/white"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_alignParentBottom="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnUpload"
                android:text="@string/upload"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_alignParentBottom="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>



</android.support.v7.widget.CardView>